BIDX-3300 - Fixed alignment of radio and inline buttons in rtl.less

--- a/wp-content/themes/bidx-group/assets/less/base-rtl.less
+++ b/wp-content/themes/bidx-group/assets/less/base-rtl.less
@@ -16,6 +16,29 @@
         float:right !important;
     }
 
+    label.inline
+    {
+        margin: 10px 0px 10px 10px;
+        float: right;
+    }
+
+    .inline-radio
+    {
+        float:  right;
+    }
+
+    .radio, .checkbox
+    {
+        padding-right: 0;
+
+    }
+
+    .radio label, .checkbox label
+    {
+        padding-left:initial;
+        padding-right:20px;
+    }
+
     .text-right
     {
         text-align:left !important;
